--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte</title>
+    <title>Vite + Svelte + TS</title>
   </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+  <body  class="dark:bg-gray-800 h-screen overflow-hidden bg-white  text-white">
+    <div id="app">
+      <script type="module" src="/src/main.ts"></script>
+      <h2 class="text-xl font-semibold mb-4">Tailwind CSS Card</h2>
+      <p>This is a centered Tailwind CSS card.</p>
+    </div>
   </body>
 </html>
